force-app/main/default/objects/Minutes__c/Minutes__c.object-meta.xml
<CustomObject>
    <description>The official record of the proceedings of a meeting</description>
    <label>Minutes</label>
    <nameField>
        <label>Minutes Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Minute</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>