force-app/main/default/objects/Minutes__c/fields/AgendaItemId__c.field-meta.xml
<CustomField>
    <fullName>AgendaItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agenda Item</label>
    <referenceTo>Agenda__c</referenceTo>
    <relationshipLabel>Minutes of Meeting</relationshipLabel>
    <relationshipName>AgdItemsMinutes</relationshipName>
    <type>Lookup</type>
</CustomField>