force-app/main/default/objects/Minutes__c/fields/KbRecorded__c.field-meta.xml
<CustomField>
    <fullName>KbRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kb Recorded</label>
    <type>Checkbox</type>
</CustomField>