force-app/main/default/objects/Minutes__c/fields/RecordKb__c.field-meta.xml
<CustomField>
    <fullName>RecordKb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Kb?</label>
    <type>Checkbox</type>
</CustomField>