force-app/main/default/objects/Minutes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MeetingId__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>AgendaItemId__c</columns>
    <columns>AttendeeId__c</columns>
    <columns>KeyWords__c</columns>
    <columns>RecordKb__c</columns>
    <columns>KbRecorded__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>